# prothesis-2

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  appveyor.bat  appveyor.yml  appveyor.yml.disabled  bintray.json  build-prothesis-2-init.sh  build-wxwidgets-init.sh  build-wxwidgets-win.sh  build-wxwidgets.sh  clean.sh  config.js  cross_file.txt  doxygen.conf  get-catch.sh  get-cpplint.sh  get-cpptoml.sh  get.sh  gui.toml  lint.sh  main.js  meson.build  package-lock.json  package.json  wxwidgets.patch
app/: index.ejs  package.json
app/frameworks/: README.md
app/js/: Checkbox.js  CheckboxContainer.js  Component.js  DataManager.js  OrderedItem.js  OrderedItemContainer.js  Panel.js  PanelCheckboxes.js  PanelDetails.js  PanelExternal.js  PanelQuestions.js  Question.js  QuestionContainer.js  README.md  dataManager.js  globals.js  gui.js  guiLoader.js  panel.js  pdf.js  report.html  report.pdf.html  reportHtmlGenerator.js  test.js  utils.js  weightedString.js
app/old/: globals.js
app/panels/: PanelAnalysis.js  PanelPriorities.js  PanelSpokenWords.js  README.md  analysis.html  index.html  index.js  priorities.html  (+1 more)
docs/: convert-json-to-toml.md  convert-json-to-toml.sh
gui/: LICENSE.md  README.md
images/: keyboard_arrow_down.xpm  keyboard_arrow_left.xpm  keyboard_arrow_right.xpm  keyboard_arrow_up.xpm
public_html/: DownloadsCSS.css  index.html
src/: .paged_panel.cpp.swp  .paged_panel.hpp.swp  about_frame.cpp  about_frame.hpp  career_test_panel.cpp  career_test_panel.hpp  checkbox_panel.cpp  checkbox_panel.hpp  coloured_button.cpp  coloured_button.hpp  coloured_button_container.cpp  coloured_button_container.hpp  data_manager.cpp  data_manager.hpp  data_panel.cpp  data_panel.hpp  main_frame.cpp  main_frame.hpp  mbti_panel.cpp  mbti_panel.hpp  navigation_drawer.cpp  navigation_drawer.hpp  navigation_item.cpp  navigation_item.hpp  navigation_link.cpp  navigation_link.hpp  paged_panel.cpp  paged_panel.hpp  prothesis_app.cpp  prothesis_app.hpp  questions_panel.cpp  questions_panel.hpp  theme_panel.cpp  theme_panel.hpp  utilities.cpp  utilities.hpp
tests/: Makefile  cpptoml.cpp
wxGlade/: base.wxg  details_panel.wxg  main_frame.wxg  paged_panel.wxg
(+101 files in other folders)
